--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,117 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
+
+a {
+  text-decoration: none;
+  color: #555;
+}
+
+body {
+  font-size: 14px;
+  font-family: Arial;
+  border-top: 2px solid #000;
+  position: relative;
+}
+
+section {
+  display: flex;
+  width: 1100px;
+  margin: 0 auto;
+ 
+
+  .logo {
+    display: flex;
+    flex-flow: row nowrap;
+    height: 78px;
+    width: 78px;
+    margin: 20px 0;
+  }
+
+  .menu {
+    width: 1100px;
+    height: 120px;
+
+    .top-menu {
+      font-size: 13px;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-end;
+      flex-wrap: nowrap;
+      line-height: 22px;
+
+      li {
+        height: 15px;
+        line-height: 20px;
+        margin: 15px 0;
+        padding: 0 16px;
+        border-right: 1px solid #ccc;
+
+      }
+
+      li:nth-child(4) {
+        border: 0;
+
+      }
+
+      .search {
+        border: 0;
+        margin-top: 8px;
+        margin-right: 50px;
+        padding: 0;
+
+
+        input {
+          width: 150px;
+          padding-top: 0;
+          display: none;
+
+        }
+      }
+    }
+
+    #main-menu {
+      display: flex;
+      justify-content: flex-end;
+      li {
+        padding: 2% 2%;
+        justify-content: center;
+        flex-wrap: nowrap;
+
+        div{
+          background-color: #ccc;
+          width: 100%
+          position absolute;
+          left: 0;
+          top: 120px;
+          display: flex;
+          flex-wrap: wrap;
+          display: none;
+        
+        }
+        #coffee {
+          position: absolute;
+          width: 100%;
+          section {
+            width: 1100px;
+            margin: 0 auto;
+          }
+          ul {
+            width: 200px;
+            justify-content: space-between;
+            flex-wrap: wrap;
+          }
+        }
+       
+        }
+      li:hover #coffee{
+        display: block;
+        display: flex;
+      }
+
+
+      }
+    }
+  }
