--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -11,9 +12,13 @@ a {
 
 body {
   font-size: 14px;
-  font-family: Arial;
+  font-family: Arial, "맑은고딕";
   border-top: 2px solid #000;
   position: relative;
+}
+
+header {
+  background-color: #f6f5ef;
 }
 
 section {
@@ -31,13 +36,13 @@ section .logo {
 section .menu {
   width: 1100px;
   height: 120px;
+  background-color: #f6f5ef;
 }
 section .menu .top-menu {
   font-size: 13px;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
-  flex-wrap: nowrap;
   line-height: 22px;
 }
 section .menu .top-menu li {
@@ -68,31 +73,67 @@ section .menu #main-menu {
 section .menu #main-menu li {
   padding: 2% 2%;
   justify-content: center;
-  flex-wrap: nowrap;
 }
 section .menu #main-menu li div {
-  background-color: #ccc;
-  width: 100% position absolute;
-  left: 0;
-  top: 120px;
-  display: flex;
-  flex-wrap: wrap;
   display: none;
 }
 section .menu #main-menu li #coffee {
-  position: absolute;
+  flex-wrap: wrap;
+  background-color: #2c2a29;
   width: 100%;
+  position: absolute;
+  left: 0;
+  top: 120px;
 }
-section .menu #main-menu li #coffee section {
+section .menu #main-menu li #coffee .inner {
   width: 1100px;
   margin: 0 auto;
-}
-section .menu #main-menu li #coffee ul {
-  width: 200px;
-  justify-content: space-between;
   flex-wrap: wrap;
 }
-section .menu #main-menu li:hover #coffee {
+section .menu #main-menu li #coffee .inner ul li {
+  flex-wrap: wrap;
+  width: 210px;
+}
+section .menu #main-menu li #coffee .inner ul li a {
+  color: #999;
+}
+section .menu #main-menu li #coffee .inner ul li h3 {
+  font-size: 13px;
+  padding: 10px 0;
+}
+section .menu #main-menu li #coffee .inner ul li h3 a {
+  color: #fff;
+}
+section .menu #main-menu li #coffee .inner ul:last-of-type {
+  flex-basis: 0;
+  width: 1100px;
+}
+section .menu #main-menu li .under {
+  margin-top: 20px;
+  padding: 8px 0;
+  background-image: url(../img/under-bg.png);
   display: block;
-  display: flex;
+}
+section .menu #main-menu li .under section .down {
+  padding: 20px 0;
+  width: 500px;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+section .menu #main-menu li .under section .down li {
+  font-size: 12px;
+  color: yellowgreen;
+  width: 1000px;
+  padding: 0;
+  line-height: 20px;
+}
+section .menu #main-menu li .under section .down li h4 {
+  padding-top: 5px;
+  font-size: 12px;
+}
+section .menu #main-menu li .under section .down li h4 a {
+  color: #959999;
+}
+section .menu #main-menu li:hover #coffee {
+  display: inline-block;
 }/*# sourceMappingURL=main.css.map */
