--- a/style/main.scss
+++ b/style/main.scss
@@ -11,16 +11,20 @@ a {
 
 body {
   font-size: 14px;
-  font-family: Arial;
+  font-family: Arial, "맑은고딕";
   border-top: 2px solid #000;
   position: relative;
+
+}
+header {
+  background-color:#f6f5ef;;
 }
 
 section {
   display: flex;
   width: 1100px;
   margin: 0 auto;
- 
+
 
   .logo {
     display: flex;
@@ -33,13 +37,13 @@ section {
   .menu {
     width: 1100px;
     height: 120px;
+    background-color: #f6f5ef;
 
     .top-menu {
       font-size: 13px;
       display: flex;
       flex-direction: row;
       justify-content: flex-end;
-      flex-wrap: nowrap;
       line-height: 22px;
 
       li {
@@ -75,43 +79,96 @@ section {
     #main-menu {
       display: flex;
       justify-content: flex-end;
+
       li {
         padding: 2% 2%;
         justify-content: center;
-        flex-wrap: nowrap;
 
-        div{
-          background-color: #ccc;
-          width: 100%
-          position absolute;
+        div {
+          display: none;
+        }
+        ////////////////////////////////////////////////////
+
+        #coffee {
+          flex-wrap: wrap;
+          background-color: #2c2a29;
+          width: 100%;
+          position: absolute;
           left: 0;
           top: 120px;
-          display: flex;
-          flex-wrap: wrap;
-          display: none;
-        
-        }
-        #coffee {
-          position: absolute;
-          width: 100%;
-          section {
+
+          .inner {
             width: 1100px;
             margin: 0 auto;
-          }
-          ul {
-            width: 200px;
-            justify-content: space-between;
             flex-wrap: wrap;
+
+            ul {
+
+              li {
+                flex-wrap: wrap;;
+                width: 210px;;
+                a {
+                  color: #999;
+                }
+
+                h3 {
+                  font-size: 13px;
+                  padding: 10px 0;
+                  a {
+                    color: #fff;
+                  }
+                }
+
+              }
+            }
+
+            ul:last-of-type {
+              flex-basis: 0;
+              width: 1100px;
+            }
           }
         }
-       
-        }
-      li:hover #coffee{
-        display: block;
-        display: flex;
-      }
-
-
+        .under{
+          margin-top: 20px;
+          padding: 8px 0; 
+          background-image: url(../img/under-bg.png);
+          display: block;
+          section {
+            .down {
+            padding: 20px 0;
+            width: 500px;
+            flex-direction: column;
+            flex-wrap: wrap;
+              
+              li {
+                font-size: 12px;
+                color: yellowgreen;
+                width: 1000px;
+                padding: 0;
+                line-height: 20px;
+                
+                h4 {padding-top: 5px;
+                  font-size: 12px;
+                  a{
+                    color: #959999;
+                  }
+                }
+               }
+            }
+  
+        }  
       }
     }
+
+    
+    li:hover #coffee {
+      display: inline-block;
+    }
+    
   }
+
+  }
+
+}
+
+
