--- a/style/header.scss
+++ b/style/header.scss
@@ -10,7 +10,8 @@ a {
 }
 
 body {
-  font-size: 14px;
+  font-size: 13px;
+  color: #000;
   font-family: Arial, "맑은고딕";
   border-top: 2px solid #000;
   position: relative;
@@ -80,22 +81,24 @@ section {
       display: flex;
       justify-content: flex-end;
 
-      li {
+      &>li {
+        margin-top: 7px;
         padding: 2% 2%;
         justify-content: center;
+        height: 30px;
 
-        div {
-          display: none;
-        }
-        ////////////////////////////////////////////////////
-
-        #coffee {
+        
+      
+        &>div {
           flex-wrap: wrap;
           background-color: #2c2a29;
           width: 100%;
           position: absolute;
           left: 0;
           top: 120px;
+          z-index: 5;
+          display: none;
+
 
           .inner {
             width: 1100px;
@@ -103,17 +106,18 @@ section {
             flex-wrap: wrap;
 
             ul {
-
-              li {
+              &>li {
                 flex-wrap: wrap;;
                 width: 210px;;
+                line-height: 20px;
                 a {
                   color: #999;
                 }
 
                 h3 {
-                  font-size: 13px;
-                  padding: 10px 0;
+                  font-size: 14px;
+                  padding: 15px 0;
+                  line-height: 30px;
                   a {
                     color: #fff;
                   }
@@ -159,13 +163,16 @@ section {
         }  
       }
     }
-
-
-   
+    &>li:hover {
+      background-color: #2c2a29;
+      &>a {
+        color:green;
+        text-decoration: underline;
+      }
+    }
+    
   }
-
   }
-
 }
 
 
