--- a/style/main.css
+++ b/style/main.css
@@ -2,29 +2,32 @@
   background-image: url(../img/main-banner-bg.jpg);
 }
 .main-banner-bg .main-coffee {
+  border: 1px solid red;
   position: relative;
+  top: 50px;
+  left: 50px;
   height: 646px;
-  overflow: hidden;
+  margin: 0 auto;
 }
 .main-banner-bg .main-coffee li:nth-child(1) {
   position: absolute;
-  left: 20px;
-  top: 200px;
+  left: -1%;
+  top: 23%;
 }
 .main-banner-bg .main-coffee li:nth-child(2) {
   position: absolute;
-  left: 700px;
-  top: 180px;
+  left: 45%;
+  top: 20%;
 }
 .main-banner-bg .main-coffee li:nth-child(3) {
   position: absolute;
-  left: 450px;
-  top: 80px;
+  left: 28%;
+  top: 7%;
 }
 .main-banner-bg .main-coffee li:nth-child(4) {
   position: absolute;
-  right: 200px;
-  top: 50px;
+  left: 62%;
+  top: 2%;
 }
 .main-banner-bg .main-coffee .txt-box {
   position: absolute;
