--- a/style/footer.css
+++ b/style/footer.css
@@ -1,10 +1,19 @@
+footer {
+  background-color: #2c2a29;
+}
 footer a {
   font-size: 12px;
   color: white;
 }
+footer .inner {
+  width: 1200px;
+  margin: 0 auto;
+}
 
 .footer-bg {
-  background-image: url(../img/footer-bg.png);
+  background-image: url(../img/footer_logo.png);
+  background-position: 100%, 20%;
+  background-repeat: no-repeat;
   display: flex;
   justify-content: center;
 }
