--- a/style/header.scss
+++ b/style/header.scss
@@ -1,27 +1,12 @@
-* {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
 
-a {
-  text-decoration: none;
-  color: #555;
-}
-
-body {
-  font-size: 13px;
-  color: #000;
-  font-family: Arial, "맑은고딕";
-  border-top: 2px solid #000;
-  position: relative;
-
-}
 header {
-  background-color:#f6f5ef;;
+  background-color:#f6f5ef;
+  .border__top {
+    border-top: 2px solid #000;
+  }
 }
 
-section {
+.bg-inner {
   display: flex;
   width: 1100px;
   margin: 0 auto;
@@ -82,6 +67,7 @@ section {
       justify-content: flex-end;
 
       &>li {
+        font-size: 14px;
         margin-top: 7px;
         padding: 2% 2%;
         justify-content: center;
@@ -101,12 +87,14 @@ section {
 
 
           .inner {
+            display: flex;
             width: 1100px;
             margin: 0 auto;
             flex-wrap: wrap;
 
             ul {
               &>li {
+                font-size: 12px;
                 flex-wrap: wrap;;
                 width: 210px;;
                 line-height: 20px;
