--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,12 @@
+body {
+  color: #000;
+  font-size: 12px;
+}
+
+a {
+  text-decoration: none;
+}
+
 .main-banner-bg {
   background-image: url(../img/main-banner-bg.jpg);
 }
