--- a/style/main.scss
+++ b/style/main.scss
@@ -1,4 +1,12 @@
 
+body {
+  color: #000;
+  font-size: 12px;
+}
+a {
+  text-decoration: none;
+}
+
 .main-banner-bg {
   background-image: url(../img/main-banner-bg.jpg);
   .main-coffee {border: 1px solid red;
