--- a/style/header.css
+++ b/style/header.css
@@ -1,5 +1,41 @@
+@media screen and (max-width: 960px) {
+  header .web {
+    display: none;
+  }
+  header .tablet {
+    display: flex;
+    justify-content: space-between;
+  }
+  header .tablet h1 {
+    margin: 10px;
+  }
+  header .tablet h1 img {
+    width: 45px;
+  }
+  header .tablet .tablet__icons {
+    display: flex;
+    flex-basis: auto;
+  }
+  header .tablet .tablet__icons .tablet__icon {
+    margin: 0 20px;
+    padding-top: 20px;
+    line-height: 30px;
+    line-height: 40px;
+  }
+  header .tablet .tablet__icons .tablet__icon img {
+    width: 25px;
+  }
+}
+@media screen and (min-width: 961px) {
+  .tablet {
+    display: none;
+  }
+}
 header {
   background-color: #f6f5ef;
+}
+header a {
+  color: #000;
 }
 header .border__top {
   border-top: 2px solid #000;
