--- a/style/header.scss
+++ b/style/header.scss
@@ -1,6 +1,56 @@
 
+@media screen and (max-width: 960px){
+  header{
+    .web {
+      display: none;
+    }
+    .tablet {
+      display: flex;
+      justify-content: space-between;
+      h1 {
+          margin: 10px;
+        img {
+          width: 45px;
+        
+      }
+      }
+      .tablet__icons {
+        display: flex;
+        flex-basis: auto;
+        .tablet__icon{
+          margin: 0 20px;
+          padding-top: 20px;
+          line-height: 30px;
+          line-height: 40px;
+        
+        img {
+          width: 25px;
+        }
+        
+      }
+
+        
+      }  
+    }
+
+  }
+}
+@media screen and (min-width: 961px){
+  .tablet {
+    display: none;
+   
+  }
+}
+
+
+
+
+
 header {
   background-color:#f6f5ef;
+  a {
+    color: #000;
+  }
   .border__top {
     border-top: 2px solid #000;
   }
