--- a/style/main.scss
+++ b/style/main.scss
@@ -2,6 +2,7 @@
 body {
   color: #000;
   font-size: 12px;
+  width: 100%;
 }
 a {
   text-decoration: none;
@@ -9,44 +10,99 @@ a {
 
 .main-banner-bg {
   background-image: url(../img/main-banner-bg.jpg);
-  .main-coffee {border: 1px solid red;
+  .main-coffee {
     position: relative;
-    top: 50px;
-    left: 50px;
+    width: 100%;
     height: 646px;
     margin: 0 auto;
 
     li:nth-child(1) {
       position: absolute;
-      left: -1%;
-      top: 23%;
-    }
+      left: 250px;
+      top: 195px;
+      animation: main-banner__poster 3s;
+      }
+
     li:nth-child(2) {
       position: absolute;
-      left: 45%;
-      top: 20%;
+      left: 925px;
+      top: 172px;
+      animation: main-banner__drink01 3s;
+
     }
     li:nth-child(3) {
       position: absolute;
-      left: 28%;
-      top: 7%;
+      left: 680px;
+      top: 71px;
+      animation: main-banner__drink02 3s;
+
     } 
     li:nth-child(4) {
       position:absolute;
-      left: 62%;
-      top: 2%;
+      left: 1175px;
+      top: 50px;
+      animation: main-banner__drink03 3s;
     }
+
     .txt-box {
+      font-size: 14px;
       position: absolute;
-      left: 110px;
-      top: 420px;
+      left: 345px;
+      top: 410px;
       border: 2px solid #000;
-      border-radius: 7%;
-      padding: 8px 28px;
+      border-radius: 5px;
+      padding: 10px 30px;
+      animation: main-banner__txt-box 3s;
+
 
       a { 
         color: #000;
       }
+    }
+    .txt-box:hover {
+      background-color: #fff;
+      text-decoration: underline;
+    }
+    
+    @keyframes main-banner__poster{
+      0%{opacity: 0}
+      20%{opacity: 1;}
+      40%{opacity: 1;}
+      60%{opacity: 1;}
+      80%{opacity: 1;}
+      100%{opacity: 1;}
+    }
+    @keyframes main-banner__drink01{
+      0%{opacity: 0}
+      20%{opacity: 0;}
+      40%{opacity: 1;}
+      60%{opacity: 1;}
+      80%{opacity: 1;}
+      100%{opacity: 1;}
+    }
+    @keyframes main-banner__drink02{
+      0%{opacity: 0}
+      20%{opacity: 0;}
+      40%{opacity: 0;}
+      60%{opacity: 1;}
+      80%{opacity: 1;}
+      100%{opacity: 1;}
+    }
+    @keyframes main-banner__drink03{
+      0%{opacity: 0}
+      20%{opacity: 0;}
+      40%{opacity: 0;}
+      60%{opacity: 0;}
+      80%{opacity: 1;}
+      100%{opacity: 1;}
+    }   
+    @keyframes main-banner__txt-box{
+      0%{opacity: 0}
+      20%{opacity: 0;}
+      40%{opacity: 0;}
+      60%{opacity: 0;}
+      80%{opacity: 0;}
+      100%{opacity: 1;}
     }
  }
 }
@@ -56,35 +112,45 @@ a {
 .notice-txt {
   display: flex;
   .notice-left {
-    width: 50%;
+    width: 60%;
     height: 60px;
     display: flex;
     justify-content: flex-end;
     padding: 0;
     background-color: #000;
+
     li {
       line-height: 60px;
       margin: 0 10px;
       color: #fff;
+      font-size: 14px;
+      
+
       a {
-        color: #fff;}
+        color: #fff;
+      }
       h2 {
         font-size: 16px;
       }
     }
+
     .plus-btn {
+      padding: 0;
       margin: 0 20px;
-      margin-top: 10px;
+      margin-top: 12px;
       font-size: 30px;
-      border: 1px solid #fff;
+      line-height: 28px;
       width: 35px;
       height: 35px;
-      border-radius: 25px;
+      border: 1px solid #fff;
+      border-radius: 40px;
       text-align: center;
-      line-height: 35px;
       a {
         color: #fff;
       }
+    }
+    .notice__slide-up {
+      padding-right: 180px;
     }
   }
   .notice-right {
@@ -94,73 +160,91 @@ a {
     display: flex;
     justify-content: flex-start;
     li {
-
-      line-height: 35px;
+      line-height: 40px;
       margin: 10px 30px;
       h2 {
+        flex-basis: auto;
         margin-left: 50px;
-        font-size: 16px;
+        font-size: 18px;
+        font-weight: bold;
+        margin-left: 180px;
        }
     }
   }
 }
 
-.slide {border: 1px solid orange;
+.slide {
+  position: relative;
   background-color: #f6f5ef;
   display: flex;
-  width: 100%;
- /*  overflow: hidden; */
   ul {
     width: 2490px;
+    font-size: 14px;
     position: relative;
-    left: 290px;
-    margin: 0px 10px;
+    margin: 0px 5px;
     margin-top: 40px;
-    li:last-child{
+    .slide-banner {border: 1px solid red;
+      width: 819px;
+      justify-content: center;
+      margin-left: -35%;
+    }
+
+    .more__btn{
       border: 2px solid #000;
       border-radius: 5px;
       width: 125px;
       height: 37px;
       text-align: center;
       line-height: 35px;
-      position: relative;
-      left: 42%;
-      top: -8%;
+      position: absolute;
+      bottom: 5px;
+      left: 12%;
+    }
+  }
+  
+  .slide__btn {border: 1px solid green;
+    position: absolute;
+    top :40%;
+    left: 23%;
+    width: 1050px;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+
+
+    .prev {
+      line-height: 40px;
+      text-align: center;
+      font-size: 45px;
+      width: 50px;
+      height: 50px;
+      border: 2px solid #000;
+      border-radius: 50px;
+    }
+  
+    .next {
+      line-height: 40px;
+      text-align: center;
+      font-size: 45px;
+      width: 50px;
+      height: 50px;
+      border: 2px solid #000;
+      border-radius: 50px;
+     
     }
   }
 }
 
-.slide-btn {
-  overflow: hidden;
-  .next {
-    line-height: 50px;
-    text-align: center;
-    font-size: 40px;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #000;
-    border-radius: 25px;
-    position: absolute;
-    left: 200px;
-    top: 1050px;
-  }
 
-  .prev {
-    line-height: 50px;
-    text-align: center;
-    font-size: 40px;
-    width: 50px;
-    height: 50px;
-    border: 2px solid #000;
-    border-radius: 25px;
-    position: absolute;
-    right: 200px;
-    top: 1050px;
-  }
+.slide__play {
+ 
   ul {
+    position: relative;
     border: 1px solid red;
     display: flex;
     justify-content: center;
+      
+  
     li {
       margin: 0 5px;
       margin-bottom: 20px;
