--- a/style/main.scss
+++ b/style/main.scss
@@ -174,45 +174,56 @@ a {
 }
 
 .slide {
-  position: relative;
   background-color: #f6f5ef;
-  display: flex;
-  ul {
+  width: 820px;
+  margin: 0 auto;
+  position: relative;
+  .slide__item {border: 1px solid green;
+    display: flex;
     width: 2490px;
-    font-size: 14px;
-    position: relative;
-    margin: 0px 5px;
-    margin-top: 40px;
-    .slide-banner {border: 1px solid red;
-      width: 819px;
-      justify-content: center;
-      margin-left: -35%;
+    margin-left: -100%;
+    .slide__banner {border: 1px solid red;
+      margin: 0 5px;
+      position: relative;
     }
 
     .more__btn{
       border: 2px solid #000;
       border-radius: 5px;
-      width: 125px;
-      height: 37px;
-      text-align: center;
-      line-height: 35px;
+      padding: 10px 23px;
       position: absolute;
-      bottom: 5px;
-      left: 12%;
+      bottom: 1%; 
+      left: 41%;
+      transition: background-color 0.5s;
+
+      a {
+        color: #000;
+        font-size: 13px;
+        transition: color 0.5s;
+      }
+ 
     }
+    :hover{ 
+      background-color: #000;
+    :hover a{
+      color: #fff;
+      font-weight: bold;
+      text-decoration: underline;
+    }
+  }
   }
   
   .slide__btn {border: 1px solid green;
-    position: absolute;
-    top :40%;
-    left: 23%;
-    width: 1050px;
+    width: 1000px;
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+    position: absolute;
+    top: 50%;
+    left: -9%;
 
 
-    .prev {
+    #next, #prev{
       line-height: 40px;
       text-align: center;
       font-size: 45px;
@@ -220,34 +231,33 @@ a {
       height: 50px;
       border: 2px solid #000;
       border-radius: 50px;
+      cursor: pointer;
+      }
+    #next:hover{
+      background-color: #fff;
     }
-  
-    .next {
-      line-height: 40px;
-      text-align: center;
-      font-size: 45px;
-      width: 50px;
-      height: 50px;
-      border: 2px solid #000;
-      border-radius: 50px;
-     
+    #prev:hover{
+      background-color: #fff;
     }
+   
   }
 }
 
 
 .slide__play {
- 
-  ul {
-    position: relative;
-    border: 1px solid red;
+  margin-top: 20px;
+  width: 100%;
+  margin: 20px auto;
+
+  .slide__play__btn {
     display: flex;
     justify-content: center;
       
-  
-    li {
-      margin: 0 5px;
+    &>li {
+      margin: 0 3px;
       margin-bottom: 20px;
     }
+  
+
   }
 }
