--- a/scss/header-mob.scss
+++ b/scss/header-mob.scss
@@ -1,13 +1,17 @@
 
+
 a {
   text-decoration: none;
   color: #fff;
 }
+
 #mob-menu {
   background-color: rgba($color: #000000, $alpha: 0.7);
   display: flex;
   justify-content: flex-end;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
+  right: -100%;
+
 
   .close {
     position: absolute;
@@ -23,83 +27,88 @@ a {
     .mob-menu-slide__search {
       background-color: #2d2926;
       border-bottom: 1px solid #222;
+
       .mob-search {
         height: 60px;
         display: flex;
-        padding: 25px 0; 
-      
+        padding: 25px 0;
 
-      #mob-search-box {
-        margin: 0 10px;
-        width: 70%;  
-        height: 75%;
-        border-radius: 5px;
-        border: none;
-    
-      }
 
-      .search-btn {
-        margin: 0 10px;
-        width: 25%;
-        height: 75%;
-        border: none;
-        border-radius: 5px;
-        background-color: #666;
-        color: #fff;
-        font-size: 1.5rem;
-        
-      }
-      .search-btn:hover {
-        text-decoration: underline;
-        cursor: pointer;
-      }
+        #mob-search-box {
+          margin: 0 10px;
+          width: 70%;
+          height: 75%;
+          border-radius: 5px;
+          border: none;
 
-    
+        }
+
+        .search-btn {
+          margin: 0 10px;
+          width: 25%;
+          height: 75%;
+          border: none;
+          border-radius: 5px;
+          background-color: #666;
+          color: #fff;
+          font-size: 1.5rem;
+
+        }
+
+        .search-btn:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+
+
+      }
     }
-  }
 
     .drop-menu {
 
-    #frist-menu {
-      background-color: #2d2926;
-    }
-    
-    .drop-menu__title{border: 1px solid green;
-      padding: 24px;
-      border-bottom: 1px solid #222;
-      background-color: #111;
-      cursor: pointer;
-      .drop-btn {
-        float: right;
-        width: 30px;
-        height: 20px;
-        padding-top: 8px;
+      #frist-menu {
+        background-color: #2d2926;
       }
-     
-      .drop-menu__down {
-        display: none;
-        .drop-menu__txt {
-          height: 60px;
-          border: 1px solid pink;
-          line-height: 3.5rem;
+
+      .drop-menu__title {
+        line-height: 70px;
+        border-bottom: 1px solid #222;
+        background-color: #111;
+        cursor: pointer;
+
+        .drop-btn {
+          float: right;
+          width: 30px;
+          height: 20px;
+          padding-top: 8px;
         }
 
-
-        .drop-menu__down__down {
+        .drop-menu__down {
           display: none;
-          li {border: 1px solid orange;
-            height: 60px;
+          background-color: #111;
 
+          .drop-menu__txt {
+            line-height: 3.5rem;
+          }
+
+
+          .drop-menu__down__down {
+            display: none;
+
+            li {
+              border: 1px solid orange;
+              height: 60px;
+
+            }
           }
         }
       }
-      }
-    }
-    .drop-menu__title:hover {
-      text-decoration: underline;
-    }
-  }
-  }
-  
-  
+      .drop-menu__title.on {
+        text-decoration: underline;
 
+    }
+
+
+  }
+}
+}
