--- a/scss/header-mob.scss
+++ b/scss/header-mob.scss
@@ -1,4 +1,9 @@
-
+#header-mob {
+  width: 100%;
+  position: absolute;
+  right: -100%;
+  top: 0;
+}
 
 a {
   text-decoration: none;
@@ -14,6 +19,7 @@ a {
 
 
   .close {
+    cursor: pointer;
     position: absolute;
     left: 22%;
     top: 6%;
@@ -78,9 +84,10 @@ a {
 
         .drop-btn {
           float: right;
-          width: 30px;
+          width: 20px;
           height: 20px;
-          padding-top: 8px;
+          padding-top: 25px;
+          padding-right: 25px;
         }
 
         .drop-menu__down {
@@ -96,7 +103,6 @@ a {
             display: none;
 
             li {
-              border: 1px solid orange;
               height: 60px;
 
             }
