--- a/scss/header-mob.scss
+++ b/scss/header-mob.scss
@@ -77,6 +77,7 @@ a {
     }
 
     .drop-menu {
+      width: 100%;
  
 
 
@@ -85,7 +86,6 @@ a {
       }
 
       &>.drop-menu__title {
-        width: 515px;
         padding-left: 20px;
         line-height: 70px;
         border-bottom: 1px solid #222;
@@ -100,7 +100,6 @@ a {
         }
 
         &>.drop-menu__down {
-          width: 495px;
       margin-left: -20px;
       padding-left: 40px;
           display: none;
