--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,125 @@
+#header-mob {
+  width: 100%;
+  position: absolute;
+  right: -100%;
+  top: 0;
+  z-index: 20;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+#mob-menu {
+  background-color: rgba($color: #000000, $alpha: 0.7);
+  display: flex;
+  justify-content: flex-end;
+  font-size: 1.5rem;
+  right: -100%;
+
+  .close {
+    cursor: pointer;
+    position: absolute;
+    left: 22%;
+    top: 50px;
+  }
+
+  .close:hover {
+    transform: rotate(360deg);
+    transition: 2s;
+  }
+
+  .mob-menu-slide {
+    width: 70%;
+
+    .mob-menu-slide__search {
+      background-color: #2d2926;
+      border-bottom: 1px solid #222;
+
+      .mob-search {
+        height: 60px;
+        display: flex;
+        padding: 20px 20px;
+
+        #mob-search-box {
+          margin: 0 10px;
+          width: 70%;
+          height: 75%;
+          border-radius: 5px;
+          border: none;
+        }
+
+        .search-btn {
+          margin: 0 10px;
+          width: 25%;
+          height: 75%;
+          border: none;
+          border-radius: 5px;
+          background-color: #666;
+          color: #fff;
+          font-size: 1.5rem;
+        }
+
+        .search-btn:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .drop-menu {
+      width: 100%;
+
+      #frist-menu {
+        background-color: #2d2926;
+      }
+
+      & > .drop-menu__title {
+        padding-left: 20px;
+        line-height: 70px;
+        border-bottom: 1px solid #222;
+        background-color: #111;
+        cursor: pointer;
+
+        .drop-btn {
+          float: right;
+          width: 20px;
+          height: 20px;
+          padding-right: 25px;
+        }
+
+        & > .drop-menu__down {
+          margin-left: -20px;
+          padding-left: 40px;
+          display: none;
+          background-color: #181818;
+
+          .drop-menu__txt {
+            line-height: 3.5rem;
+          }
+
+          .drop-menu__down__down {
+            background-color: #222222;
+            display: none;
+            margin-left: -40px;
+            padding-left: 60px;
+            a {
+              color: #666;
+            }
+
+            li {
+              height: 60px;
+            }
+          }
+        }
+      }
+      .drop-menu__title.on {
+        text-decoration: underline;
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 960px) {
   header {
@@ -14,7 +136,6 @@
 
         img {
           width: 45px;
-
         }
       }
 
@@ -36,7 +157,7 @@
     }
   }
 }
-@media screen and (min-width: 961px){
+@media screen and (min-width: 961px) {
   .tablet {
     display: none;
   }
@@ -45,12 +166,8 @@
   }
 }
 
-
-
-
-
 header {
-  background-color:#f6f5ef;
+  background-color: #f6f5ef;
   a {
     color: #000;
   }
@@ -63,7 +180,6 @@ header {
   display: flex;
   width: 1100px;
   margin: 0 auto;
-
 
   .logo {
     display: flex;
@@ -91,12 +207,10 @@ header {
         margin: 15px 0;
         padding: 0 16px;
         border-right: 1px solid #ccc;
-
       }
 
       li:nth-child(4) {
         border: 0;
-
       }
 
       .search {
@@ -105,12 +219,10 @@ header {
         margin-right: 50px;
         padding: 0;
 
-
         input {
           width: 150px;
           padding-top: 0;
           display: none;
-
         }
       }
     }
@@ -119,16 +231,14 @@ header {
       display: flex;
       justify-content: flex-end;
 
-      &>li {
+      & > li {
         font-size: 14px;
         margin-top: 7px;
         padding: 2% 2%;
         justify-content: center;
         height: 30px;
 
-        
-      
-        &>div {
+        & > div {
           flex-wrap: wrap;
           background-color: #2c2a29;
           width: 100%;
@@ -138,7 +248,6 @@ header {
           z-index: 5;
           display: none;
 
-
           .inner {
             display: flex;
             width: 1100px;
@@ -146,10 +255,10 @@ header {
             flex-wrap: wrap;
 
             ul {
-              &>li {
+              & > li {
                 font-size: 12px;
-                flex-wrap: wrap;;
-                width: 210px;;
+                flex-wrap: wrap;
+                width: 210px;
                 line-height: 20px;
                 a {
                   color: #999;
@@ -163,7 +272,6 @@ header {
                     color: #fff;
                   }
                 }
-
               }
             }
 
@@ -173,47 +281,44 @@ header {
             }
           }
         }
-        .under{
+        .under {
           margin-top: 20px;
-          padding: 8px 0; 
+          padding: 8px 0;
           background-image: url(../img/under-bg.png);
           display: block;
           section {
             .down {
-            padding: 20px 0;
-            width: 500px;
-            flex-direction: column;
-            flex-wrap: wrap;
-              
+              padding: 20px 0;
+              width: 500px;
+              flex-direction: column;
+              flex-wrap: wrap;
+
               li {
                 font-size: 12px;
                 color: yellowgreen;
                 width: 1000px;
                 padding: 0;
                 line-height: 20px;
-                
-                h4 {padding-top: 5px;
+
+                h4 {
+                  padding-top: 5px;
                   font-size: 12px;
-                  a{
+                  a {
                     color: #959999;
                   }
                 }
-               }
+              }
             }
-  
-        }  
+          }
+        }
+      }
+      & > li:hover {
+        background-color: #2c2a29;
+        & > a {
+          color: green;
+          text-decoration: underline;
+        }
       }
     }
-    &>li:hover {
-      background-color: #2c2a29;
-      &>a {
-        color:green;
-        text-decoration: underline;
-      }
-    }
-    
-  }
   }
 }
-
-
