--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,25 @@
+@media screen and (max-width: 1440px) {
+  .main-coffee {
+    position: relative;
+  }
+  .main-coffee img {
+    width: 100%;
+  }
+  .main-coffee .main-coffee__img1 {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+  }
+}
+html {
+  overflow: auto;
+}
+
 body {
   color: #000;
   font-size: 12px;
+  overflow: hidden;
+  position: relative;
 }
 
 a {
@@ -9,17 +28,14 @@ a {
 
 .main-banner-bg {
   position: relative;
-  width: 100%;
   background-image: url(../img/main-banner-bg.jpg);
 }
 .main-banner-bg .main-coffee {
   border: 1px solid green;
   height: 646px;
 }
-.main-banner-bg .main-coffee img {
-  width: 100%;
-}
 .main-banner-bg .main-coffee .main-coffee__img1 {
+  width: 20%;
   position: absolute;
   left: 250px;
   top: 195px;
@@ -27,6 +43,7 @@ a {
           animation: main-banner__poster 3s;
 }
 .main-banner-bg .main-coffee .main-coffee__img2 {
+  width: 20%;
   position: absolute;
   left: 925px;
   top: 172px;
@@ -34,6 +51,7 @@ a {
           animation: main-banner__drink01 3s;
 }
 .main-banner-bg .main-coffee .main-coffee__img3 {
+  width: 20%;
   position: absolute;
   left: 680px;
   top: 71px;
@@ -41,6 +59,7 @@ a {
           animation: main-banner__drink02 3s;
 }
 .main-banner-bg .main-coffee .main-coffee__img4 {
+  width: 20%;
   position: absolute;
   left: 1175px;
   top: 50px;
@@ -324,94 +343,6 @@ a {
   font-size: 18px;
   font-weight: bold;
   margin-left: 180px;
-}
-
-.slide {
-  background-color: #f6f5ef;
-  width: 820px;
-  margin: 0 auto;
-  position: relative;
-}
-.slide .slide__item {
-  border: 1px solid green;
-  display: flex;
-  width: 2490px;
-  margin-left: -100%;
-}
-.slide .slide__item .slide__banner {
-  border: 1px solid red;
-  margin: 0 5px;
-  position: relative;
-}
-.slide .slide__item .more__btn {
-  border: 2px solid #000;
-  border-radius: 5px;
-  padding: 10px 23px;
-  position: absolute;
-  bottom: 1%;
-  left: 41%;
-  transition: background-color 0.5s;
-}
-.slide .slide__item .more__btn a {
-  color: #000;
-  font-size: 13px;
-  transition: color 0.5s;
-}
-.slide .slide__item :hover {
-  background-color: #000;
-}
-.slide .slide__item :hover :hover a {
-  color: #fff;
-  font-weight: bold;
-  text-decoration: underline;
-}
-.slide .slide__btn {
-  border: 1px solid green;
-  width: 1000px;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  position: absolute;
-  top: 50%;
-  left: -9%;
-}
-.slide .slide__btn #next,
-.slide .slide__btn #prev {
-  line-height: 40px;
-  text-align: center;
-  font-size: 45px;
-  width: 50px;
-  height: 50px;
-  border: 2px solid #000;
-  border-radius: 50px;
-  cursor: pointer;
-}
-.slide .slide__btn #next:hover {
-  background-color: #fff;
-}
-.slide .slide__btn #prev:hover {
-  background-color: #fff;
-}
-
-.slide__play {
-  margin-top: 20px;
-  width: 100%;
-  margin: 20px auto;
-}
-.slide__play .slide__play__btn {
-  display: flex;
-  justify-content: center;
-}
-.slide__play .slide__play__btn > li {
-  margin: 0 3px;
-  margin-bottom: 20px;
-}
-
-.autoplay {
-  overflow: hidden;
-}
-.autoplay div img {
-  width: 850px;
 }
 
 #header-mob {
