--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,8 +1,25 @@
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 1440px) {
+  .main-coffee {
+    img {
+      width: 100%;
+    }
+    position: relative;
+    .main-coffee__img1 {
+      position: absolute;
+      left: 10px;
+      top: 10px;
+    }
+  }
+}
+
+html {
+  overflow: auto;
 }
 body {
   color: #000;
   font-size: 12px;
+  overflow: hidden;
+  position: relative;
 }
 a {
   text-decoration: none;
@@ -10,16 +27,13 @@ a {
 
 .main-banner-bg {
   position: relative;
-  width: 100%;
   background-image: url(../img/main-banner-bg.jpg);
   .main-coffee {
     border: 1px solid green;
     height: 646px;
-    img {
-      width: 100%;
-    }
 
     .main-coffee__img1 {
+      width: 20%;
       position: absolute;
       left: 250px;
       top: 195px;
@@ -27,18 +41,21 @@ a {
     }
 
     .main-coffee__img2 {
+      width: 20%;
       position: absolute;
       left: 925px;
       top: 172px;
       animation: main-banner__drink01 3s;
     }
     .main-coffee__img3 {
+      width: 20%;
       position: absolute;
       left: 680px;
       top: 71px;
       animation: main-banner__drink02 3s;
     }
     .main-coffee__img4 {
+      width: 20%;
       position: absolute;
       left: 1175px;
       top: 50px;
@@ -228,102 +245,6 @@ a {
         font-weight: bold;
         margin-left: 180px;
       }
-    }
-  }
-}
-
-.slide {
-  background-color: #f6f5ef;
-  width: 820px;
-  margin: 0 auto;
-  position: relative;
-  .slide__item {
-    border: 1px solid green;
-    display: flex;
-    width: 2490px;
-    margin-left: -100%;
-    .slide__banner {
-      border: 1px solid red;
-      margin: 0 5px;
-      position: relative;
-    }
-
-    .more__btn {
-      border: 2px solid #000;
-      border-radius: 5px;
-      padding: 10px 23px;
-      position: absolute;
-      bottom: 1%;
-      left: 41%;
-      transition: background-color 0.5s;
-
-      a {
-        color: #000;
-        font-size: 13px;
-        transition: color 0.5s;
-      }
-    }
-    :hover {
-      background-color: #000;
-      :hover a {
-        color: #fff;
-        font-weight: bold;
-        text-decoration: underline;
-      }
-    }
-  }
-
-  .slide__btn {
-    border: 1px solid green;
-    width: 1000px;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-between;
-    position: absolute;
-    top: 50%;
-    left: -9%;
-
-    #next,
-    #prev {
-      line-height: 40px;
-      text-align: center;
-      font-size: 45px;
-      width: 50px;
-      height: 50px;
-      border: 2px solid #000;
-      border-radius: 50px;
-      cursor: pointer;
-    }
-    #next:hover {
-      background-color: #fff;
-    }
-    #prev:hover {
-      background-color: #fff;
-    }
-  }
-}
-
-.slide__play {
-  margin-top: 20px;
-  width: 100%;
-  margin: 20px auto;
-
-  .slide__play__btn {
-    display: flex;
-    justify-content: center;
-
-    & > li {
-      margin: 0 3px;
-      margin-bottom: 20px;
-    }
-  }
-}
-
-.autoplay {
-  overflow: hidden;
-  div {
-    img {
-      width: 850px;
     }
   }
 }
